crates/rome_js_formatter/tests/specs/prettier/typescript/declare/declare_module.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: declare_module.ts

---
# Input
```js
declare module m {
  class C {
    field = "field";
  }
}

```

# Output
```js
declare module m {
  class C {
    field = "field";
  }
}

```

# Errors
```
error[SyntaxError]: Initializers are not allowed in ambient contexts.
  ┌─ declare_module.ts:3:11
  │
3 │     field = "field";
  │           ^^^^^^^^^


```


